--- a/css/tienda.css
+++ b/css/tienda.css
@@ -58,8 +58,13 @@ button{
     margin: 10px 0 10px 0;
     border: none;
 }
-button :hover{
-    color: black;
+button:hover{
+    background-color: blue;
+    border-radius: 10px;
+    color: yellow;
+}
+.nav-link:hover{
+    font-weight: bold;
 }
 footer{
     background-color: black;
