--- a/css/tienda.css
+++ b/css/tienda.css
@@ -51,17 +51,17 @@ p {
     font-size: 1.5rem;
 }
 button{
-    background-color: rgb(35, 244, 35);
-    color: white;
+    background-color: blue;
+    color: rgb(244, 228, 228);
     border-radius: 10px;
     font-weight: bold;
     margin: 10px 0 10px 0;
     border: none;
 }
 button:hover{
-    background-color: blue;
+    background-color: black;
     border-radius: 10px;
-    color: yellow;
+    color: white;
 }
 .nav-link:hover{
     font-weight: bold;
